<resources>
    <string name="app_name">botik</string>
    <string name="mavi_botic">MAVI BOTIC</string>
    <string name="close">بستن</string>
    <string name="NoInternet">به اینترنت متصل نیستی</string>
    <string name="TryAgain">تلاش مجدد</string>
    <string name="user">حساب کاربری</string>
    <string name="cart">سبد خرید</string>
    <string name="Main">صفحه اصلی</string>
    <string name="Ads">تبلیغات</string>
    <string name="collections">منو</string>
    <string name="manto">مانتو</string>
    <string name="gheymat">قیمت:</string>
    <string name="madein">ساخت کشور</string>
    <string name="keshvar">ساخت کشور:</string>
    <string name="tozhi">توضیح</string>
    <string name="addtocart">اضافه کردن به سبد خرید</string>
    <string name="register">ثبت نام</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="haveaccount">آیا حساب کاربری دارید؟</string>
    <string name="login">ورود</string>
    <string name="name">نام کالا:</string>
    <string name="jens">جنس کالا:</string>
    <string name="useraccount">حساب کاربری</string>
    <string name="histori">سوابق خرید</string>
    <string name="edit">ویرایش اطلاعات</string>
    <string name="yourusername">نام کاربری شما :</string>
    <string name="exit">خروج از حساب کاربری</string>
    <string name="enter">ورود</string>
    <string name="doyouhaveaccount">حساب کاربری ندارید</string>
    <string name="add">آدرس و کد پستی خود را وارد نمایید:</string>
    <string name="address">آدرس</string>
    <string name="codeposti">کد پستی:</string>
    <string name="enterphone">شماره همراه و شماره ثابت خود را وارد نمایید:</string>
    <string name="phone">شماره موبایل</string>
    <string name="phonesabt">شماره تلفن ثابت به همراه کد شهر</string>
    <string name="sabt">ثبت اطلاعات</string>
    <string name="shomaresefaresh">شماره سفارش</string>
    <string name="countpardakht">مجموع پرداخت :</string>
    <string name="pardakhtmoafagh">پرداخت موفق</string>
    <string name="khata">پرداخت ناموفق</string>
    <string name="jamekol">جمع کل :</string>
    <string name="pardakht">مرحله بعد</string>
    <string name="count">تعداد:</string>
    <string name="Select">آدرس محل دریافت سفارش خود را انتخاب کنید!!!</string>
    <string name="Address">آدرس:</string>
    <string name="ShomareHmrah">شماره همراه:</string>
    <string name="ShomareSabet">شماره ثابت:</string>
    <string name="selectpay">لطفا یکی از درگاه های زیر را انتخاب کنید</string>
    <string name="show">مشاهده اطلاعات</string>
    <string name="Back">بازگشت</string>
    <string name="YourAddress">آدرس و کدپستی شما</string>
    <string name="YourPhone">شماره ثابت و شماره همراه شما</string>
</resources>