<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="data"
            type="com.example.botik.viewmodel.ViewModelEdit" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layoutDirection="ltr"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@drawable/userimg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/amim"
                        android:text="@string/useraccount"
                        android:textColor="#FFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-40dp"
                    android:background="@drawable/maincorner"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/add"
                        android:fontFamily="@font/amim"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#f2f2f2"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/username_edt"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@={data.address}"
                            android:fontFamily="@font/amim"
                            android:background="@android:color/transparent"
                            android:hint="@string/address"
                            android:lines="1"
                            android:textDirection="rtl"
                            android:maxLines="1"
                            android:paddingLeft="18dp"
                            android:paddingRight="18dp"
                            android:singleLine="true" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimaryDark" />

                        <EditText
                            android:id="@+id/code_posti"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="@string/codeposti"
                            android:inputType="number"
                            android:text="@={data.codeposti}"
                            android:lines="1"
                            android:fontFamily="@font/amim"
                            android:textDirection="rtl"
                            android:maxLines="1"
                            android:paddingLeft="18dp"
                            android:paddingRight="18dp"
                            android:singleLine="true" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/enterphone"
                        android:fontFamily="@font/amim"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#f2f2f2"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/mobail"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="@string/phone"
                            android:inputType="number"
                            android:text="@={data.phone}"
                            android:fontFamily="@font/amim"
                            android:lines="1"
                            android:textDirection="rtl"
                            android:maxLines="1"
                            android:paddingLeft="18dp"
                            android:paddingRight="18dp"
                            android:singleLine="true" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimaryDark" />

                        <EditText
                            android:id="@+id/telefon"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="@string/phonesabt"
                            android:inputType="number"
                            android:lines="1"
                            android:text="@={data.phonesabet}"
                            android:textDirection="rtl"
                            android:fontFamily="@font/amim"
                            android:maxLines="1"
                            android:paddingLeft="18dp"
                            android:paddingRight="18dp"
                            android:singleLine="true" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_continu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="18dp"
                        android:drawableEnd="@drawable/ic_chevron_right"
                        android:gravity="center"
                        android:text="@string/sabt"
                        android:textColor="#FFF"
                        android:padding="8dp"
                        android:textSize="20sp"
                        android:onClick="@{data.Edit}"
                        android:fontFamily="@font/amim"
                        android:tint="@android:color/white"
                        app:fabSize="normal"
                        android:background="@drawable/addcart"
                        app:rippleColor="#f2f2f2" />


                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
