<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="data"
            type="com.example.botik.model.ModelUserInfo" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layoutDirection="ltr"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@drawable/userimg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:fontFamily="@font/amim"
                        android:text="@string/useraccount"
                        android:textColor="#FFF"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-40dp"
                    android:orientation="vertical"
                    android:background="@drawable/maincorner">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:tint="@android:color/white"
                        android:background="@drawable/addcart"
                        app:fabSize="normal"
                        android:id="@+id/edit"
                        android:layout_gravity="center"
                        android:textColor="#FFF"
                        android:text="@string/edit"
                        android:textSize="20sp"
                        android:padding="10dp"
                        android:fontFamily="@font/amim"
                        app:rippleColor="#f2f2f2"
                        android:drawableEnd="@drawable/ic_chevron_right"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:tint="@android:color/white"
                        android:background="@drawable/addcart"
                        app:fabSize="normal"
                        android:id="@+id/show"
                        android:layout_gravity="center"
                        android:textColor="#FFF"
                        android:text="@string/show"
                        android:textSize="20sp"
                        android:padding="10dp"
                        android:fontFamily="@font/amim"
                        app:rippleColor="#f2f2f2"
                        android:drawableEnd="@drawable/ic_chevron_right"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:tint="@android:color/white"
                        android:background="@drawable/addcart"
                        app:fabSize="normal"
                        android:layout_gravity="center"
                        android:textColor="#FFF"
                        android:text="@string/histori"
                        android:textSize="20sp"
                        android:padding="10dp"
                        android:fontFamily="@font/amim"
                        android:id="@+id/sabege"
                        app:rippleColor="#f2f2f2"
                        android:drawableEnd="@drawable/ic_chevron_right"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:gravity="right"
                        android:layout_gravity="right"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="20dp"
                            android:textSize="20sp"
                            android:id="@+id/username"
                            android:fontFamily="@font/amim"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:layout_marginTop="20dp"
                            android:textSize="20sp"
                            android:fontFamily="@font/amim"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/yourusername"/>

                    </LinearLayout>





                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amim"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:tint="@android:color/white"
                        android:background="@drawable/addcart"
                        app:fabSize="normal"
                        android:layout_gravity="center"
                        android:textColor="#FFF"
                        android:layout_marginBottom="5dp"
                        android:text="@string/exit"
                        android:textSize="20sp"
                        android:id="@+id/exit"
                        app:rippleColor="#f2f2f2"
                        android:padding="8dp"
                        android:drawableEnd="@drawable/ic_exit"
                        />




                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
    
</layout>