<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="data"
            type="com.example.botik.model.ModelSelectAddress" />
    </data>

    <androidx.cardview.widget.CardView
        android:layoutDirection="rtl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amim"
                    android:textSize="16sp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/Address"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amim"
                    android:textSize="16sp"
                    android:layout_marginEnd="10dp"
                    android:text="@{data.address}"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amim"
                    android:textSize="16sp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/codeposti"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amim"
                    android:textSize="16sp"
                    android:id="@+id/codeposti"
                    android:layout_marginEnd="10dp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amim"
                    android:textSize="16sp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/ShomareHmrah"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amim"
                    android:textSize="16sp"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/phone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amim"
                    android:textSize="16sp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/ShomareSabet"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amim"
                    android:textSize="16sp"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/shomaresabet"/>


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>