<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="data"
            type="com.example.botik.viewmodel.ViewModelRegister" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/signuup" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#66000000" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/amim"
                android:text="@string/register"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-60dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFF"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/amim"
                        android:hint="@string/username"
                        android:lines="1"
                        android:text="@={data.username}"
                        android:maxLines="1"
                        android:paddingLeft="18dp"
                        android:paddingRight="18dp"
                        android:singleLine="true"
                        android:textAlignment="center" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#f2f2f2" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/amim"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:text="@={data.password}"
                        android:maxLines="1"
                        android:paddingLeft="18dp"
                        android:paddingRight="18dp"
                        android:singleLine="true"
                        android:textAlignment="center" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#f2f2f2" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/addcart"
               android:onClick="@{data.Register}"
                android:drawableEnd="@drawable/ic_chevron_right"
                android:focusable="true"
                android:fontFamily="@font/amim"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#FFF"
                android:tint="@android:color/white"
                app:fabSize="normal"
                app:rippleColor="#f2f2f2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/LogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/amim"
                android:text="@string/login"
                android:onClick="@{data.Login}"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amim"
                android:text="@string/haveaccount"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</layout>